# physics-experiments

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
assets/: empty_scene.xml
examples/: ex_mujoco_primitive_contact_forces.py
