[project]
name = "physics-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.5",
    "mujoco>=3.3.4",
    "pyqt6>=6.9.1",
    "tyro>=0.9.27",
]

[dependency-groups]
dev = [
    "ipython>=8.37.0",
    "pre-commit>=4.2.0",
    "pybind11-stubgen>=2.5.4",
    "ruff>=0.12.7",
]
