[project]
name = "physics-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.5",
    "mujoco>=3.3.4",
    "pyqt6>=6.9.1",
    "tyro>=0.9.27",
]

[dependency-groups]
dev = [
    "ipython>=8.37.0",
    "pre-commit>=4.2.0",
    "pybind11-stubgen>=2.5.4",
    "ruff>=0.12.7",
]

[tool.ruff]
target-version = "py310"
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = false

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = [
    "C408", # dict() calls
    "C901", # function complexity
    "E501", # line too long (handled by line-length setting
]
